--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,11 +44,31 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      - name: 🔄 PM2 Restart
+      - name: 🚀 Deploy Application with PM2
+        env:
+          SERVER_HOST: ${{ secrets.SERVER_HOST }}
+          SERVER_USER: ${{ secrets.SERVER_USER }}
+          PROJECT_NAME: ${{ env.PROJECT_NAME }}
         run: |
-          ssh ${SERVER_USER}@${SERVER_HOST} "
-            pm2 restart ${PROJECT_NAME}
-          "
+          ssh ${SERVER_USER}@${SERVER_HOST} bash << 'ENDSSH'
+            set -e
+
+            echo "🔄 Pulling latest changes from GitHub..."
+            cd ~/projects/${PROJECT_NAME}
+            git reset --hard
+            git pull origin main
+
+            echo "📦 Installing dependencies..."
+            pnpm install --frozen-lockfile
+
+            echo "🏗 Building the application..."
+            pnpm build
+
+            echo "🔄 Restarting the application with PM2..."
+            pm2 restart ${PROJECT_NAME} || pm2 start dist/index.js --name ${PROJECT_NAME}
+
+            echo "✅ Deployment completed successfully!"
+          ENDSSH
 
       - name: 📢 Telegram notification
         if: always()
@@ -58,7 +78,7 @@ jobs:
           TELEGRAM_THREAD_ID: ${{ secrets.TELEGRAM_THREAD_ID }}
         run: |
           STATUS="${{ job.status == 'success' && '✅ Success' || '❌ Failed' }}"
-          MESSAGE="🚀 *${{ env.PROJECT_NAME }} Restart*
+          MESSAGE="🚀 *${{ env.PROJECT_NAME }} Deployment*
 
           📦 Repository: \`${{ github.repository }}\`
           🌿 Branch: \`${{ github.ref_name }}\`
@@ -70,14 +90,10 @@ jobs:
 
           curl -s -X POST "https://api.telegram.org/bot${PROD_BOT_TOKEN}/sendMessage" \
             -H "Content-Type: application/json" \
-            -d "$(jq -nc \
-              --arg chat_id "$TELEGRAM_CHAT_ID" \
-              --argjson thread_id "$TELEGRAM_THREAD_ID" \
-              --arg text "$MESSAGE" \
-              '{
-                chat_id: $chat_id,
-                message_thread_id: $thread_id,
-                text: $text,
-                parse_mode: "Markdown",
-                disable_web_page_preview: true
-              }')"
+            -d "{
+              \"chat_id\": \"${TELEGRAM_CHAT_ID}\",
+              \"message_thread_id\": ${TELEGRAM_THREAD_ID},
+              \"text\": \"$MESSAGE\",
+              \"parse_mode\": \"Markdown\",
+              \"disable_web_page_preview\": true
+            }"
